--- a/CS_460_Software_Engineering/HW3/Calculator.csproj
+++ b/CS_460_Software_Engineering/HW3/Calculator.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="javacode\**" />
+    <EmbeddedResource Remove="javacode\**" />
+    <None Remove="javacode\**" />
+  </ItemGroup>
+
 </Project>
