Should hopefully be up now?

--- a/CS_460_Software_Engineering/HW4/HW4/HW4.csproj
+++ b/CS_460_Software_Engineering/HW4/HW4/HW4.csproj
@@ -125,6 +125,8 @@
     <None Include="Properties\PublishProfiles\CustomProfile1.pubxml" />
     <None Include="Properties\PublishProfiles\CustomProfile2.pubxml" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\mcalawa - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\mcalawa - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
