--- a/CS_460_Software_Engineering/HW4/HW4/HW4.csproj
+++ b/CS_460_Software_Engineering/HW4/HW4/HW4.csproj
@@ -98,6 +98,22 @@
   <ItemGroup>
     <Content Include="Global.asax" />
     <Content Include="css\site.css" />
+    <Content Include="images\modelbinding1.png" />
+    <Content Include="images\page1_jspart1.png" />
+    <Content Include="images\page1_jspart2.png" />
+    <Content Include="images\page1_jspart3.png" />
+    <Content Include="images\page1_jspart4.png" />
+    <Content Include="images\page1_jspart5.png" />
+    <Content Include="images\page1_part1.png" />
+    <Content Include="images\page1_part2.png" />
+    <Content Include="images\page1_part3.png" />
+    <Content Include="images\page1_part4.png" />
+    <Content Include="images\page2_part1.png" />
+    <Content Include="images\page2_part2.png" />
+    <Content Include="images\page2_part3.png" />
+    <Content Include="images\page3-1.png" />
+    <Content Include="images\page3-2.png" />
+    <Content Include="images\page3-3.png" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -136,7 +152,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="images\" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
