--- a/CS_460_Software_Engineering/HW5/HW5/Web.config
+++ b/CS_460_Software_Engineering/HW5/HW5/Web.config
@@ -10,6 +10,11 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
+  <connectionStrings>
+    <add name="HW5Database"
+   connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Melis\OneDrive\Documents\School\Computer Science\Senior Project\Portfolio\GitHub\senior_project\CS_460_Software_Engineering\HW5\HW5\App_Data\HW5Database.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+   providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
