--- a/CS_460_Software_Engineering/HW5/HW5/Web.config
+++ b/CS_460_Software_Engineering/HW5/HW5/Web.config
@@ -12,7 +12,7 @@
   </appSettings>
   <connectionStrings>
     <add name="HW5Database"
-   connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\Melis\OneDrive\Documents\School\Computer Science\Senior Project\Portfolio\GitHub\senior_project\CS_460_Software_Engineering\HW5\HW5\App_Data\HW5Database.mdf;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+   connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=HW5Database;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
    providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
