--- a/CS_460_Software_Engineering/HW5/HW5/HW5.csproj
+++ b/CS_460_Software_Engineering/HW5/HW5/HW5.csproj
@@ -118,6 +118,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\ChangeAddressForm.cshtml" />
     <Content Include="Views\Home\AddressChanges.cshtml" />
+    <None Include="Properties\PublishProfiles\mcalawahw5 - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\mcalawahw5 - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
