More documentation, ho hum.

--- a/CS_460_Software_Engineering/HW4/HW4/HW4.csproj
+++ b/CS_460_Software_Engineering/HW4/HW4/HW4.csproj
@@ -96,6 +96,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="css\site.css" />
     <Content Include="images\modelbinding1.png" />
