--- a/CS_460_Software_Engineering/HW5/HW5/HW5.csproj
+++ b/CS_460_Software_Engineering/HW5/HW5/HW5.csproj
@@ -97,6 +97,10 @@
     <Content Include="App_Data\up.sql" />
     <Content Include="css\site.css" />
     <Content Include="Global.asax" />
+    <Content Include="favicon.ico" />
+    <Content Include="images\demo1.png" />
+    <Content Include="images\demo2.png" />
+    <Content Include="images\demo3.png" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
