--- a/CS_460_Software_Engineering/HW5/HW5/HW5.csproj
+++ b/CS_460_Software_Engineering/HW5/HW5/HW5.csproj
@@ -98,6 +98,13 @@
     <Content Include="css\site.css" />
     <Content Include="Global.asax" />
     <Content Include="favicon.ico" />
+    <Content Include="images\datadisplay1.png" />
+    <Content Include="images\datadisplay2.png" />
+    <Content Include="images\datadisplay3.png" />
+    <Content Include="images\datamodel1.png" />
+    <Content Include="images\datamodel2.png" />
+    <Content Include="images\datamodel3.png" />
+    <Content Include="images\datamodel4.png" />
     <Content Include="images\demo1.png" />
     <Content Include="images\demo2.png" />
     <Content Include="images\demo3.png" />
