--- a/CS_460_Software_Engineering/HW6/HW6/HW6.csproj
+++ b/CS_460_Software_Engineering/HW6/HW6/HW6.csproj
@@ -141,7 +141,7 @@
     <Content Include="Views\Home\Clothing.cshtml" />
     <Content Include="Views\Home\Accessories.cshtml" />
     <Content Include="Views\Home\Menu.cshtml" />
-    <Content Include="Views\Home\Review.cshtml" />
+    <Content Include="Views\Home\LeaveReview.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
